# ace

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  TODO.md  change  errors.cpp  test
ace/: Package.json  generator.py  package.json
ace/src/: generated.ace  main.ace
example/: package.json
example/src/: main.ace
include/: AccessModifier.hpp  AnonymousIdent.hpp  Application.hpp  Assert.hpp  Asserts.hpp  C.hpp  CFA.hpp  CLIArgBuffer.hpp  CLIArgParser.hpp  Cacheable.hpp  CommandLineArgBuffer.hpp  CommandLineArgumentBuffer.hpp  Compilation.hpp  ControlFlow.hpp  ControlFlowAnalysis.hpp  Core.hpp  Decl.hpp  Diagnosed.hpp  Diagnostic.hpp  DiagnosticBag.hpp  DiagnosticBase.hpp  DiagnosticLog.hpp  DiagnosticStringConversions.hpp  Diagnostics.hpp  DiagnosticsBase.hpp  DynamicCastFilter.hpp  Emittable.hpp  Emitter.hpp  EnumClassHash.hpp  Error.hpp  ErrorSymbols.hpp  Expected.hpp  ExprDropData.hpp  ExprDropInfo.hpp  ExprEmitResult.hpp  ExpressionDropData.hpp  ExpressionEmitResult.hpp  File.hpp  FileBuffer.hpp  FunctionBlockBinding.hpp  (+47 more)
include/BoundNode/: All.hpp  Attribute.hpp  Base.hpp  Function.hpp  Impl.hpp  Module.hpp  Typed.hpp
include/BoundNodes/: All.hpp  AttributeBoundNode.hpp  BoundNode.hpp  FunctionBoundNode.hpp  (+3 more)
src/: AnonymousIdent.cpp  Application.cpp  C.cpp  CFA.cpp  CLIArgBuffer.cpp  CLIArgParser.cpp  CommandLineArgumentBuffer.cpp  Compilation.cpp  ControlFlowAnalysis.cpp  Core.cpp  Decl.cpp  DiagnosticBag.cpp  DiagnosticLog.cpp  DiagnosticStringConversions.cpp  Diagnostics.cpp  Emitter.cpp  ErrorSymbols.cpp  Expected.cpp  File.cpp  FileBuffer.cpp  FunctionBodyBinding.cpp  GenericInstantiator.cpp  GlobalDiagnosticBag.cpp  GlueGeneration.cpp  Keyword.cpp  Lexer.cpp  Log.cpp  Name.cpp  NativeSymbol.cpp  Natives.cpp  Noun.cpp  OpResolution.cpp  Package.cpp  Parser.cpp  PlaceholderOverlapping.cpp  Scanner.cpp  Scope.cpp  SpecialIdent.cpp  SpecialIdentifier.cpp  SrcLocation.cpp  (+8 more)
(+990 files in other folders)
